fixed the fix for the too long incentives-names

--- a/graphics/css/intermission.css
+++ b/graphics/css/intermission.css
@@ -108,7 +108,7 @@ element {
 	color: #6e2c30;
 	line-height: 45px;
 }
-.gameTitle {font-size: 31px; line-height: 40px; padding:20px;}
+.gameTitle {font-size: 31px; line-height: 40px; white-space: nowrap;}
 .gameCategory, .gameConsole, .gamePlayers {font-size: 21px; line-height: 37px;}
 .gamePlayers span {padding: 0 5px;} /* This is the storage for the runner names. */
 .gamePlayers img {height: 1.2em;} /* Images next to player name(s) are the same height. */
